--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   margin-top: 30px;
   padding: 10px;
   justify-content: center;
-  background-color: rgba(102, 119, 136, 0.3);
+  /* background-color: rgba(102, 119, 136, 0.3); */
 }
 
 .results {
@@ -29,18 +29,19 @@
 
 .results {
   display: flex;
-  flex-direction: column;
   flex-wrap: wrap;
+  flex-direction: column;
   justify-content: space-evenly;
-  /* border: 1px solid black; */
   padding: 10px;
-  /* background-color: #f8f8f8f8; */
   margin-left: 30px;
   margin-right: 30px;
+  width: 80%;
+  max-width: 80%;
 }
 
 .results a:hover {
   font-weight: bold;
+  flex-wrap: wrap;
 }
 
 .result {
