Add popup title

--- a/src/App.css
+++ b/src/App.css
@@ -110,7 +110,7 @@ input {
 .modal-content {
   background-color: #fefefe;
   margin: auto;
-  padding: 20px;
+  padding: 0px 20px 20px 20px;
   border: 1px solid #888;
   width: 80%;
 }
