--- a/src/App.css
+++ b/src/App.css
@@ -104,8 +104,9 @@ a:focus {
   left: 0;
   top: 0;
   width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
+  height: 90%; /* Full height */
+  /* overflow: auto; */
+  overflow: scroll; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
