--- a/src/JsonToTable.css
+++ b/src/JsonToTable.css
@@ -92,10 +92,17 @@ table {
 
 .api-results table {
   border-collapse: collapse;
-  table-layout: fixed;
+  /* table-layout: fixed; */
 }
 
 .small-table {
-  width: calc(100% - 0.2em);
-  margin: 1.5em 0.1em 0.1em 0.1em;
+  /* width: calc(100% - 0.2em); */
+  /* margin: 1.5em 0.1em 0.1em 0.1em; */
+  width: 100%;
+  border: 0.01em lightgray;
+}
+
+.api-results-ul {
+  font-size: small;
+  margin: 2em 2em 0.5em -1em;
 }
