--- a/src/JsonToTable.css
+++ b/src/JsonToTable.css
@@ -80,6 +80,7 @@ table,
 td,
 th {
   border: 1px solid gray;
+  font-size: small;
 }
 
 table {
@@ -92,12 +93,9 @@ table {
 
 .api-results table {
   border-collapse: collapse;
-  /* table-layout: fixed; */
 }
 
 .small-table {
-  /* width: calc(100% - 0.2em); */
-  /* margin: 1.5em 0.1em 0.1em 0.1em; */
   width: 100%;
   border: 0.01em lightgray;
 }
