--- a/src/App.css
+++ b/src/App.css
@@ -117,7 +117,8 @@ a:focus {
   margin: auto;
   padding: 0px 20px 20px 20px;
   border: 1px solid #888;
-  width: 75%;
+  width: 60em;
+  max-width: 75%;
 }
 
 /* The Close Button */
