--- a/src/App.css
+++ b/src/App.css
@@ -216,7 +216,10 @@ nav > ul {
   /* align-items: start; */
   width: 50%;
   height: 20em;
-  margin: 1em auto auto auto;
+  margin: 1.05em auto auto auto;
+  -moz-box-shadow: inset 0 0 0.4em #000000;
+  -webkit-box-shadow: inset 0 0 0.4em #000000;
+  box-shadow: inset 0 0 0.4em #000000;
 }
 
 .avatar {
