--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: rgb(42, 42, 46);
+}
+
 .nav-link {
   display: flex;
   flex-direction: row;
@@ -201,6 +205,11 @@ nav > ul {
 
 #query-field {
   margin-top: 1em;
+  /* background-color: rgb(56, 56, 61);
+  box-sizing: border-box;
+  color: rgb(249, 249, 250);
+  cursor: text;
+  box-shadow: rgba(12, 12, 13, 0.2); */
 }
 
 #battleground {
