--- a/src/App.css
+++ b/src/App.css
@@ -254,9 +254,14 @@ nav > ul {
   cursor: crosshair;
 }
 
+.holder {
+  position: relative;
+}
+
 .no-suggestions {
   color: #999;
   padding: 0.5rem;
+  position: absolute;
 }
 
 .suggestions {
@@ -268,6 +273,7 @@ nav > ul {
   overflow-y: auto;
   padding-left: 0;
   width: calc(300px + 1rem);
+  position: absolute;
 }
 
 .suggestions li {
@@ -284,4 +290,8 @@ nav > ul {
 
 .suggestions li:not(:last-of-type) {
   border-bottom: 1px solid #999;
+}
+
+#creature {
+  width: auto;
 }
