--- a/src/App.css
+++ b/src/App.css
@@ -121,14 +121,15 @@ a:focus {
 .close-button {
   color: #aaaaaa;
   float: right;
-  font-size: 28px;
+  font-size: 1.2em;
+  padding: .2em .5em;
   margin-top: 15px;
   font: Arial;
 }
 
 .close-button:hover,
 .close-button:focus {
-  color: #000;
+  color: black;
   text-decoration: none;
   cursor: pointer;
 }
