--- a/src/App.css
+++ b/src/App.css
@@ -317,3 +317,10 @@ nav > ul {
 #popout-checkbox label {
   margin-left: 0.2em;
 }
+
+#loader {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  padding: 3em 0em 1.5em 0em;
+}
