--- a/src/App.css
+++ b/src/App.css
@@ -318,6 +318,12 @@ nav > ul {
   margin-left: 0.2em;
 }
 
+#loader {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  padding: 3em 0em 1.5em 0em;
+}
 .puff-in-center {
 	animation: puff-in-center 0.6s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
 }
